# VQE-MC-PDFT

./: .flake8  .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
data/: benzene_excitations.csv  c2_excitation_energies.csv  c2_excited_state_pec.csv  c2_excited_state_pec_exact.csv  c2_excited_state_shci_pec.csv  c2_ground_state_pec.csv  c2_ground_state_pec_exact.csv  c2_ground_state_shci_reference.csv  cr2_active_space.csv  cr2_active_space_figure.csv  cr2_basis_set.csv  cr2_basis_set_figure.csv  cr2_boxplot_raw.csv  cr2_larsson_reference_curve.csv  tianji_s2_calibration.json
error_mitigation/: __init__.py  clifford_fitting.py  fem_readout.py  zne.py
experiments/: benzene_excitations.py  c2_excited_states.py  c2_ground_state.py  cr2_1p5A_cutting.py  cr2_active_space.py  cr2_basis_set.py  generate_figures.py
plot/: plot_common.py  plot_fig2_c2_ground_state.py  plot_fig3_c2_excited_states.py  plot_fig4_cr2_active_space.py  plot_fig5_cr2_basis_set.py  plot_fig6_cr2_qubit_utilization.py  plot_fig7_benzene_vertical_excitations.py  plot_supp_tianji_s2_hardware_fidelity.py
quantum_circuit_cutting/: __init__.py  channel_decomposition.py  cutting_dispatch.py  cutting_vqe.py  fragment_circuits.py  overhead.py  partition.py  reconstruction.py
tests/: sim_utils.py  test_channel_decomposition.py  test_config_consistency.py  test_cutting_upgrade.py  test_energy_consistency.py  test_experiment_smoke.py  test_fem_readout.py  test_flow_contract.py  test_hardening_semantic.py  test_integration.py  test_overhead.py  test_partition.py  test_phase3_hardening.py  test_pipeline_hardening.py  test_reconstruction.py  test_semantic_consistency.py
vqe_mcpdft/: __init__.py  ansatz.py  hamiltonian.py  mcpdft_energy.py  orbital_rotation.py  overlap_estimator.py  rdm.py  self_consistent.py  tqp_backend.py  vqe_solver.py
