[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vqe-mcpdft"
version = "1.0.0"
description = "VQE-MC-PDFT: Multiconfiguration Pair-Density Functional Theory with Variational Quantum Eigensolver and Quantum Circuit Cutting"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Zhanou Liu"},
    {name = "Yuhao Chen"},
    {name = "Yingjin Ma"},
    {name = "Xiao He", email = "xiaohe@phy.ecnu.edu.cn"},
    {name = "Yuxin Deng", email = "yxdeng@msg.sufe.edu.cn"},
]
keywords = [
    "quantum chemistry",
    "variational quantum eigensolver",
    "multiconfiguration pair-density functional theory",
    "quantum circuit cutting",
    "strong electron correlation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24,<2.0",
    "scipy>=1.10",
    "pyscf>=2.4",
    "tensorcircuit>=0.12",
    "networkx>=3.0",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "pylint>=3.0",
]

[project.urls]
Repository = "https://github.com/quantum-chemistry/vqe-mcpdft-cutting"

[tool.setuptools.packages.find]
include = ["vqe_mcpdft*", "quantum_circuit_cutting*", "error_mitigation*"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116", "R0903", "R0913", "R0914"]
